supporting upper case HTTP and HTTPS